Renamed TestComponent to TextExcerpt

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
    <meta charset="UTF-8">
-   <title>Cathy's React Template</title>
+   <title>Cathy's Typing Game</title>
 </head>
 <body>
    <div id="root"></div>
