Added google font

--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
    <meta charset="UTF-8">
+   <link href="https://fonts.googleapis.com/css?family=Special+Elite" rel="stylesheet">
    <title>Cathy's Typing Game</title>
 </head>
 <body>
